<resources>
    <string name="app_name">Game-Plan</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="pause">Pause</string>
    <string name="clear">Clear</string>
    <string name="start">Start</string>
    <string name="game_4">Game 4</string>
    <string name="game_3">Game 3</string>
    <string name="game_2">Game 2</string>
    <string name="reset_vote">RESET VOTE</string>
    <string name="game_1">Game 1</string>
</resources>