<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Timer">

    <Button
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="256dp"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.789"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="256dp"
        android:text="@string/pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginBottom="176dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <NumberPicker
        android:id="@+id/picker1"
        android:layout_width="100dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="56dp"
        android:solidColor="#03A9F4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <NumberPicker
        android:id="@+id/picker3"
        android:layout_width="100dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:solidColor="#673AB7"
        app:layout_constraintEnd_toStartOf="@+id/picker2"
        app:layout_constraintTop_toTopOf="parent" />

    <NumberPicker
        android:id="@+id/picker2"
        android:layout_width="100dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:solidColor="#3F51B5"
        app:layout_constraintEnd_toStartOf="@+id/picker1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="301dp"
        android:layout_height="39dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="52dp"
        android:text="          Hr                        Min                       Sec   "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>